# Artwoodique

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  runtime.txt
core/: admin.py  filters.py  forms.py  urls.py  views.py
core/core/utils/: misc.py  settings.py
core/main/: admin.py  apps.py  filters.py  urls.py  views.py
core/main/migrations/: 0001_initial.py
core/main/models/: order_models.py  shop_models.py
core/migrations/: 0001_initial.py  0002_sale_product_sale.py  0003_remove_product_sale_sale_product.py  0004_product_material_product_size_product_subheading_and_more.py  0005_subscriber.py
core/models/: order_models.py
core/project/: urls.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
core/shared/: __init__.py  functions.py
core/static/css/: catalog.css  contact.css  main.css  shop.css
core/templates/: index.html  shop.html
core/templates/own/: details.html  index.html  shop.html
core/templatetags/: custom_filters.py
main/: admin.py  filters.py  urls.py  views.py
main/models/: shop_models.py
project/: settings.py  urls.py
shared/: __init__.py  functions.py
static/css/: details.css
static/js/: details.js
templates/own/: catalog.html  details.html
