[tool.poetry]
name = "artwoodique"
version = "0.1.0"
description = "Artwoodique shop"
authors = ["Mariyan Georgiev <mariqn5000@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "3.11.4"
pillow = "^10.0.1"
django-filter = "^23.2"
django-ckeditor = "^6.7.0"
django = "^4.2.5"
psycopg2 = "^2.9.7"
asgiref = "3.7.2"
#django-admin-hstore-widget = "1.2.1"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
whitenoise = "^6.6.0"
gunicorn = "21.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
